search/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search 
  template:
    metadata:
      labels:
        app: search 
    spec:
      containers:
      - name: search 
        image: ghcr.io/pmh-only/sosse:latest
