search/service.yml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
